--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "trpl"
 version = "0.1.0"
 edition = "2021"
-default-run = "3-5"
+default-run = "5-1"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -32,3 +32,7 @@ path = "src/3-3/main.rs"
 [[bin]]
 name = "3-5"
 path = "src/3-5/main.rs"
+
+[[bin]]
+name = "5-1"
+path = "src/5-1/main.rs"
